[tool.poetry]
name = "raspberry-car"
version = "0.1.0"
description = ""
authors = ["Reza <29664187+redolat@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
gpiozero = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
